upgraded dev.yaml to have the proper settings
it wasn't yaml before and had old school settings.  switched to settings more appropriate
for sql alchemy.

--- a/sample/conf.d/dev.yaml
+++ b/sample/conf.d/dev.yaml
@@ -1,9 +1,6 @@
-db=oracle
-db=mysql
-db=postgresql
-db=sqlite
+connection: "oracle://server.com/mysite"
 
-database=work_db
-username=web
-password=pass1
+schema: myapp
+username: web
+password: pass1
 
