improved sample files
switched the sample to use sqlite3.  made the v1 migrations derive from
pygration.Step.  added v2 version set to make the sample more interesting.

--- a/sample/conf.d/dev.yaml
+++ b/sample/conf.d/dev.yaml
@@ -1,6 +1,6 @@
-connection: "oracle://server.com/mysite"
+connection: "sqlite:///sample/sampledb"
 
-schema: myapp
+schema: main
 username: web
 password: pass1
 
